--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
