--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@eslint/js": "^9.16.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "mongoose": "^8.8.4"
