--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
