--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
@@ -25,6 +27,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "mongoose": "^8.8.4"
