--- a/books-proj/package.json
+++ b/books-proj/package.json
@@ -18,8 +18,10 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "randomstring": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
